--- a/app/src/main/res/navigation/read.xml
+++ b/app/src/main/res/navigation/read.xml
@@ -18,7 +18,7 @@
         app:destination="@id/work">
         <argument
             android:name="workBlurb"
-            app:argType="org.eidos.reader.model.WorkBlurb" />
+            app:argType="org.eidos.reader.model.domain.WorkBlurb" />
         <argument
             android:name="isStoredInDatabase"
             app:argType="boolean"
