--- a/app/src/main/res/navigation/work_list.xml
+++ b/app/src/main/res/navigation/work_list.xml
@@ -44,7 +44,7 @@
         app:destination="@id/work">
         <argument
             android:name="workBlurb"
-            app:argType="org.eidos.reader.model.WorkBlurb" />
+            app:argType="org.eidos.reader.model.domain.WorkBlurb" />
         <argument
             android:name="isStoredInDatabase"
             app:argType="boolean"
