--- a/app/src/main/res/layout/local_work_list.xml
+++ b/app/src/main/res/layout/local_work_list.xml
@@ -10,45 +10,40 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
 
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent">
+        android:background="@android:color/transparent">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:contentScrim="@color/primaryColor"
+            app:expandedTitleTextAppearance="@style/transparent_text"
             app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
-            app:titleEnabled="false">
+            app:titleEnabled="true">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="@dimen/space_medium_16dp"
-                android:paddingTop="?attr/actionBarSize"
-                android:paddingEnd="@dimen/space_medium_16dp"
-                android:paddingBottom="@dimen/space_medium_16dp"
-                app:layout_collapseMode="parallax">
+                android:layout_marginTop="?attr/actionBarSize"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tagNameTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:text="Lorem Ipsum Dolor Sit Amet"
-                    android:textSize="24sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/workCountTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="Listing 250 works"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tagNameTextView"
-                    app:layout_constraintVertical_bias="0.0" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:layout_margin="16dp"
+                    android:text="Listing 250 works" />
+            </LinearLayout>
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
