--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,13 +10,13 @@
     <color name="off_black">#454545</color>
     <color name="off_white">#FAFAFA</color>
 
-    <color name="primaryColor">#d32f2f</color>
-    <color name="primaryLightColor">#ff6659</color>
-    <color name="primaryDarkColor">#9a0007</color>
-    <color name="secondaryColor">#d32f2f</color>
-    <color name="secondaryLightColor">#ff6659</color>
-    <color name="secondaryDarkColor">#9a0007</color>
-    <color name="primaryTextColor">#ffffff</color>
+    <color name="primaryColor">#fafafa</color>
+    <color name="primaryLightColor">#ffffff</color>
+    <color name="primaryDarkColor">#c7c7c7</color>
+    <color name="secondaryColor">#d81b60</color>
+    <color name="secondaryLightColor">#ff5c8d</color>
+    <color name="secondaryDarkColor">#a00037</color>
+    <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#ffffff</color>
 
     <color name="uiHighlightColor">#900</color>
