--- a/app/src/main/res/layout/layout_work_blurb_compact.xml
+++ b/app/src/main/res/layout/layout_work_blurb_compact.xml
@@ -109,7 +109,7 @@
             android:id="@+id/workLanguage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:chipBackgroundColor="@android:color/transparent"
+            app:chipBackgroundColor="@color/backgroundColor"
             app:chipIcon="@drawable/ic_card_language_16"
             app:chipIconSize="16dp"
             app:chipMinTouchTargetSize="0dp" />
@@ -118,7 +118,7 @@
             android:id="@+id/workWordCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:chipBackgroundColor="@android:color/transparent"
+            app:chipBackgroundColor="@color/backgroundColor"
             app:chipIcon="@drawable/ic_card_word_count_16"
             app:chipIconSize="16dp"
             app:chipMinTouchTargetSize="0dp" />
@@ -127,7 +127,7 @@
             android:id="@+id/workChapters"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:chipBackgroundColor="@android:color/transparent"
+            app:chipBackgroundColor="@color/backgroundColor"
             app:chipIcon="@drawable/ic_card_chapters_16"
             app:chipIconSize="16dp"
             app:chipMinTouchTargetSize="0dp" />
